:sparkles: mypy overrides ignore specific lib

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,17 @@ dev-dependencies = []
 [tool.hatch.metadata]
 allow-direct-references = true
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/mypy_starter"]
-
-[tool.mypy.override]
+[tool.mypy]
 ignore_missing_imports = true
+disallow_untyped_defs = true
+
+[[tool.mypy.overrides]]
+module = "utils.*"
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+ignore_errors = true
 
 [tool.black]
 line-length = 88
