:sparkles: black arg setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "black-formatter.args": [
+        "--config=pyproject.toml",
+    ],
     "flake8.args": [
         "--config=pyproject.toml",
     ],
