--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,20 +32,20 @@ disallow_untyped_defs = true
 
 [[tool.mypy.overrides]]
 module = "utils.*"
-ignore_errors = true
+ignore_missing_imports = false
 
 [[tool.mypy.overrides]]
 module = "tests.*"
 ignore_errors = true
 
 [tool.black]
-line-length = 88
+line-length = 120 
 target-version = ['py310']
 
 [tool.isort]
 profile = "black"
-line_length = 88
+line_length = 120
 
 [tool.flake8]
-max-line-length = 88
+max-line-length = 120
 extend-ignore = "E203, W503"
