--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
+    "editor.formatOnSave": true,
     "black-formatter.args": [
-        "--config=pyproject.toml",
+        "--config=${workspaceFolder}/pyproject.toml",
     ],
     "flake8.args": [
-        "--config=pyproject.toml",
+        "--config=${workspaceFolder}/.flake8",
     ],
     "mypy-type-checker.args": [
-        "--config-file=pyproject.toml",
-    ],
+        "--config-file=${workspaceFolder}/mypy.ini"
+    ]
 }
