--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,26 +26,15 @@ dev-dependencies = []
 [tool.hatch.metadata]
 allow-direct-references = true
 
-[tool.mypy]
-ignore_missing_imports = true
-disallow_untyped_defs = true
+[tool.hatch.build.targets.wheel]
+packages = ["src/mypy_starter"]
 
-[[tool.mypy.overrides]]
-module = "utils.*"
-ignore_missing_imports = false
-
-[[tool.mypy.overrides]]
-module = "tests.*"
-ignore_errors = true
 
 [tool.black]
-line-length = 120 
+line-length = 88
 target-version = ['py310']
 
 [tool.isort]
 profile = "black"
-line_length = 120
+line_length = 88
 
-[tool.flake8]
-max-line-length = 120
-extend-ignore = "E203, W503"
